# qlang

./: .gitignore  Cargo.toml  README.md  wsl-gcc.bat
.cargo/: config.toml
docs/: PROGRESS.md  README.md  TODO.md  Trait.md  函数进阶.md  变量和常量.md  基本类型.md  并发编程.md  控制结构.md  泛型.md  类型系统进阶.md  结构体.md  语法设计.md  运算符.md  错误处理.md  面向对象.md
docs/std/: http.md  tcp.md
src/: config.rs  main.rs
src/compiler/: bytecode.rs  codegen.rs  mod.rs  symbol.rs
src/i18n/: en.rs  ja.rs  messages.rs  mod.rs  zh.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/package/: mod.rs  project.rs  resolver.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/runtime/: channel.rs  context.rs  coroutine_vm.rs  goroutine.rs  machine.rs  mod.rs  preempt.rs  processor.rs  queue.rs  runtime.rs  scheduler.rs  stack.rs
src/stdlib/: exception.rs  mod.rs  vmtest.rs
src/stdlib/net/: http.rs  io_thread_pool.rs  mod.rs  tcp.rs
src/typechecker/: checker.rs  constraint.rs  environment.rs  error.rs  mod.rs  monomorphize.rs  unify.rs
src/types/: mod.rs  types.rs
src/vm/: gc.rs  mod.rs  value.rs  vm.rs  vtable.rs
stdlib/: Test.q
stdlib/lang/: Exception.q  IOException.q  RuntimeException.q
sublime/: Q.sublime-syntax
